Fixed Dark mode and some major bugs

--- a/static/style.css
+++ b/static/style.css
@@ -105,18 +105,6 @@ main {
 	border-radius: 5px;
 }
 
-footer {
-    background-color: #f1f1f1;
-    padding: 20px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    font-size: 14px;
-    color: #666;
-    border-top: 1px solid #ddd;
-}
 /* posts.css */
 
 .posts-container {
